--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 flask==3.0.3
 flask-cors==4.0.1
 gunicorn==21.2.0
-
 chromadb==0.4.24
 sentence-transformers==2.6.1
-
-torch==2.2.2+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
