--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 flask==3.0.3
 flask-cors==4.0.1
 gunicorn==21.2.0
-numpy<2.0.0
+
 chromadb==0.4.24
-sentence-transformers==2.6.1
-torch==2.5.1
+numpy<2.0
+
+huggingface-hub==0.23.4
+python-dotenv==1.0.1
