--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-flask==3.0.3
-flask-cors==4.0.1
+flask==3.0.0
+flask-cors==4.0.0
+python-dotenv==1.0.0
+requests==2.31.0
+sentence-transformers==2.2.2
+chromadb==0.4.22
 gunicorn==21.2.0
-
-chromadb==0.4.24
-numpy<2.0
-
-huggingface-hub==0.23.4
-python-dotenv==1.0.1
-sentence-transformers==5.2.0
