--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ flask==3.0.0
 flask-cors==4.0.0
 python-dotenv==1.0.0
 requests==2.31.0
+numpy==1.26.4
 sentence-transformers==2.2.2
+huggingface-hub==0.16.4
 chromadb==0.4.22
-numpy<2.0.0
 gunicorn==21.2.0
